<resources>
    <string name="app_name">MemoRly</string>
    <string name="edit_message">Tap to enter a memo</string>
    <string name="button_send">Save</string>
    <string name="editDate">DD/MM/YYYY</string>
    <string name="editTime">HH:MM</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="button_addMemo">Add Memo</string>
    <string-array name="modes">
        <item>Normal</item>
        <item>Important</item>
        <item>Urgent</item>
    </string-array>


    <string name="mode">Mode:</string>
    <string name="calendar">Calendar</string>
    <string name="clock">Clock</string>
    <string name="time">Time:</string>
    <string name="date">Date:</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="done">done</string>
    <string name="memo_saved">Memo saved!!</string>
    <string name="urgent_reminder_title">Urgent!!!</string>
    <string name="urgent_reminder_message">"You have set a memo: "</string>
    <string name="ok">OK</string>
    <string name="clear_dialog_title">Clear memos</string>
    <string name="clear_dialog_message">Are you sure you want to delete all memos?</string>
    <string name="alarm_setter_title">Set alarm</string>
    <string name="alram_setter_message">Do you want to set an alarm for this memo</string>
    <string name="toast_alarm_set_message">Alarm Set</string>
    <string name="toast_add_memo">Added to MemoRly</string>
</resources>
