<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_display_message"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.achilleas.memoapp.MemoHandler">
    <EditText
        android:id="@+id/MemoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/edit_message"
        android:fontFamily="cursive"
        android:textSize="30dp"
       android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"/>

    <TextView
        android:id="@+id/DateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="20dp"
        android:fontFamily="casual"
        android:layout_marginRight="10dp"
        android:layout_alignBaseline="@+id/Date"
        android:layout_alignBottom="@+id/Date"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:id="@+id/TimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textSize="20dp"
        android:fontFamily="casual"
        android:layout_marginRight="10dp"
        android:layout_alignBaseline="@+id/Time"
        android:layout_alignBottom="@+id/Time"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <ImageButton
        android:id="@+id/time_button"
        android:src="@drawable/clock_icon"
        android:background="@null"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/Time"
        android:layout_toRightOf="@+id/Time"
        android:layout_toEndOf="@+id/Time"/>

    <EditText
        android:id="@+id/Date"
        android:focusable="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:width="180dp"
        android:layout_marginTop="11dp"
        android:hint="@string/editDate"
        android:fontFamily="cursive"
        android:layout_below="@+id/MemoText"
        android:layout_toRightOf="@+id/DateTextView"
        android:layout_toEndOf="@+id/DateTextView"

        />

    <ImageButton
        android:id="@+id/calendar_button"
        android:src="@drawable/calendar_icon"
        android:background="@null"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/Date"
        android:layout_toRightOf="@+id/Date"
        android:layout_toEndOf="@+id/Date" />

    <EditText
        android:id="@+id/Time"
        android:focusable="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="datetime"
        android:layout_marginTop="11dp"
        android:width="180dp"
        android:hint="@string/editTime"
        android:fontFamily="cursive"
        android:layout_below="@+id/Date"
        android:layout_toRightOf="@+id/TimeTextView"
        android:layout_toEndOf="@+id/TimeTextView"/>
    <TextView
        android:id="@+id/Mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mode"
        android:textSize="20sp"
        android:fontFamily="casual"
        android:layout_marginRight="10dp"
        android:layout_alignBaseline="@+id/spinner"
        android:layout_alignBottom="@+id/spinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="180dp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/Time"
        android:layout_toRightOf="@+id/Mode"
        android:layout_toEndOf="@+id/Mode"></Spinner>


</RelativeLayout>
